# spbu-computational-workshop

./: .gitignore  CHANGELOG.md  Integration.py  LICENSE  README.md  Task51.py  Task52.py  kfgauss.md  kfnast.md  package.yaml  preamble.tex  pyproject.toml  runge.md  spbu-computational-workshop.cabal  spbu-computational-workshop.sln  stack.yaml
Task1/: Helpers.fs  Program.fs  RootFinder.fs  Task1.fsproj
app/backwardInterpolation/: Main.hs
app/basicIntegration/: Main.hs
app/compoundIntegration/: Main.hs
app/interpolation/: Main.hs
app/numericalDifferentiation/: Main.hs
app/rungeMethod/: Main.hs
semester5/: Task51.py
semester6/: cond.py  eigenproblem.py  ode.py  optimize.py  pde.py  sle.py  utils.py
semester6/reports/: Task1.ipynb  Task12.ipynb  Task3.ipynb  Task4.ipynb  Task5.ipynb  Task6.ipynb  Task7.ipynb  Task8.ipynb  Task9.ipynb
src/: Input.hs  Integration.hs  Interpolation.hs  NumericalDifferentiation.hs  RootFinder.hs
