[tool.poetry]
name = "spbu-computational-workshop"
version = "0.1.0"
description = ""
authors = ["Nikolai Ponomarev <wowasterdev@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.12.0"
prettytable = "^3.9.0"
jupyterlab = "^4.1.1"
notebook = "^7.1.0"
pandas = "^2.2.1"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.4.0"}
flake8 = "^6.1.0"
mypy = "^1.7.1"
flake8-bugbear = "^23.9.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
